Bug 146332 - KHTML error updating "div" content with scroll bar [testcase]
Summary: KHTML error updating "div" content with scroll bar [testcase]
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml renderer (show other bugs)
Version: 3.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-06-04 01:30 UTC by Iñaki Baz Castillo
Modified: 2009-06-21 06:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Web page that shows the issue (34.60 KB, application/x-tgz)
2007-08-12 01:27 UTC, Iñaki Baz Castillo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Iñaki Baz Castillo 2007-06-04 01:30:14 UTC
Version:           3.5.6 (using KDE 3.5.6, Kubuntu (edgy) 4:3.5.6-0ubuntu1~edgy1)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.17-10-generic

Playing with "div" with horizontal scroll (overflow: auto) and javascript updating the "div" content there is an issue when the content is reduced and the sroll dissapears.

I've done a demo page with steps to reproduce the problem:

   http://ibc.43i.net/khtml-scroll-error/index.html
Comment 1 Iñaki Baz Castillo 2007-06-19 21:39:51 UTC
Hi, no comments about this proved bug? do you need more data?
Comment 2 Bram Schoenmakers 2007-08-11 09:48:53 UTC
> do you need more data?

What about returning the demo page, or even better, attach a testcase here. Thanks in advance. 
Comment 3 Iñaki Baz Castillo 2007-08-12 01:26:18 UTC
Oh, fucking free web hosting that deletes my account without warning me before!

Ok, I've reopened my account and reenabled the page:
  http://ibc.43i.net/khtml-scroll-error/index.html

Anyway, I attach the page, just untar it and open "index.html" if the link fails.
Comment 4 Iñaki Baz Castillo 2007-08-12 01:27:49 UTC
Created attachment 21375 [details]
Web page that shows the issue
Comment 5 Allan Sandfeld 2007-09-12 15:08:23 UTC
Confirmed somehow the position should be reset when the scrollbar is removed, or if already it is the element should be repainted.
Comment 6 A. Spehr 2008-04-23 11:48:12 UTC
Sadly this is still in 4.0 branch, r793993.
Stupid scrollbars.
Comment 7 Iñaki Baz Castillo 2009-04-06 00:19:49 UTC
Still present in KDE 4.2.2.
Comment 8 Germain Garand 2009-06-21 06:36:46 UTC
SVN commit 984567 by ggarand:

reset scroll offset when scrollbars are removed.

BUG: 146332


 M  +4 -0      render_layer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=984567