reset scroll offset when scrollbars are removed.

BUG: 146332

svn path=/trunk/KDE/kdelibs/; revision=984567